// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tasks/build/webpackReleaseConfig client config has not regressed 1`] = `
Object {
  "bail": true,
  "context": "<rootDir>/src",
  "debug": false,
  "entry": Object {
    "client": Array [
      "./client",
    ],
  },
  "module": Object {
    "loaders": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "loader": "exports-loader?window.Modernizr",
        "test": /modernizr\\.js\\$/,
      },
      Object {
        "loader": "url-loader?limit=10000",
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|ttf\\|eot\\)\\$/i,
      },
      Object {
        "loader": "json-loader",
        "test": /\\\\\\.json\\$/,
      },
      Object {
        "include": /node_modules/,
        "loader": "<rootDir>/node_modules/extract-text-webpack-plugin/loader.js?{\\"omit\\":1,\\"extract\\":true,\\"remove\\":true}!style-loader!css-loader",
        "test": /\\\\\\.css\\$/,
      },
      Object {
        "exclude": /node_modules/,
        "loader": "<rootDir>/node_modules/extract-text-webpack-plugin/loader.js?{\\"omit\\":1,\\"extract\\":true,\\"remove\\":true}!style-loader!css-loader?modules!autoprefixer-loader",
        "test": /\\\\\\.css\\$/,
      },
    ],
  },
  "name": "client",
  "node": Object {
    "process": false,
  },
  "output": Object {
    "filename": "[name].[chunkhash].js",
    "path": "<rootDir>/dist",
  },
  "plugins": Array [
    UglifyJsPlugin {
      "options": Object {
        "compress": Object {
          "warnings": false,
        },
        "output": Object {
          "comments": false,
        },
      },
    },
    OccurrenceOrderPlugin {
      "preferEntry": undefined,
    },
    DefinePlugin {
      "definitions": Object {
        "process.env.NODE_ENV": "production",
      },
    },
    StatsPlugin {
      "cache": Object {},
      "options": Object {
        "chunkModules": true,
      },
      "output": "stats.json",
    },
    ExtractTextPlugin {
      "filename": "[name].[contenthash].css",
      "id": 1,
      "options": Object {
        "allChunks": true,
      },
    },
  ],
  "resolve": Object {
    "root": Array [
      "<rootDir>/src",
    ],
  },
  "target": "web",
}
`;

exports[`tasks/build/webpackReleaseConfig server config has not regressed 1`] = `
Object {
  "bail": true,
  "context": "<rootDir>/src",
  "debug": false,
  "entry": Object {
    "server": Array [
      "./server",
    ],
  },
  "module": Object {
    "loaders": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "loader": "exports-loader?window.Modernizr",
        "test": /modernizr\\.js\\$/,
      },
      Object {
        "loader": "url-loader?limit=10000",
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\|woff\\|ttf\\|eot\\)\\$/i,
      },
      Object {
        "loader": "json-loader",
        "test": /\\\\\\.json\\$/,
      },
      Object {
        "include": /node_modules/,
        "loader": "css-loader/locals",
        "test": /\\\\\\.css\\$/,
      },
      Object {
        "exclude": /node_modules/,
        "loader": "css-loader/locals?modules",
        "test": /\\\\\\.css\\$/,
      },
    ],
  },
  "name": "server",
  "node": Object {
    "process": false,
  },
  "output": Object {
    "filename": "[name].js",
    "libraryTarget": "commonjs2",
    "path": "<rootDir>/dist",
  },
  "plugins": Array [
    UglifyJsPlugin {
      "options": Object {
        "compress": Object {
          "warnings": false,
        },
        "output": Object {
          "comments": false,
        },
      },
    },
    OccurrenceOrderPlugin {
      "preferEntry": undefined,
    },
    DefinePlugin {
      "definitions": Object {
        "process.env.NODE_ENV": "production",
      },
    },
    LimitChunkCountPlugin {
      "options": Object {
        "maxChunks": 1,
      },
    },
  ],
  "resolve": Object {
    "root": Array [
      "<rootDir>/src",
    ],
  },
  "target": "node",
}
`;
